fixed progress col heading position, reduced, padding. added key to wizardInfos for custom human readable wizard titles

--- a/app/webroot/css/thermal-age-wizard.css
+++ b/app/webroot/css/thermal-age-wizard.css
@@ -134,7 +134,8 @@
 
 .progressStep .sbHeading {
     font-size: 1em;
-    margin-bottom: 0px;
+    margin-bottom: 0px !important;
+    padding: .1em .2em !important;
     border: 1px solid #8a9881;
 }
 .progressStep .stepName {
